@@ -59,7 +59,7 @@ def setup_module(module):
     webserver = SimpleWebServer()
     webserver.start()
     RemoteElementAttributeTests.webserver = webserver
-    RemoteElementAttributeTests.driver = webdriver.Remote(browser_name="firefox", platform="ANY")
+    RemoteElementAttributeTests.driver = webdriver.Remote(desired_capabilities = webdriver.DesiredCapabilities.FIREFOX)
 
 
 class RemoteElementAttributeTests(element_attribute_tests.ElementAttributeTests):
