@@ -58,7 +58,7 @@ def setup_module(module):
     webserver = SimpleWebServer()
     webserver.start()
     RemoteRenderedWebElementTests.webserver = webserver
-    RemoteRenderedWebElementTests.driver = webdriver.Remote(browser_name="firefox", platform="ANY")
+    RemoteRenderedWebElementTests.driver = webdriver.Remote(desired_capabilities = webdriver.DesiredCapabilities.FIREFOX)
 
 
 class RemoteRenderedWebElementTests(rendered_webelement_tests.RenderedWebElementTests):
